--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
       Tu navegador no soporta el elemento de audio.
     </audio>
 
+    <audio id="alarmSound">
+      <source src="./media/attention.mp3" type="audio/mpeg" />
+      Tu navegador no soporta el elemento de audio.
+    </audio>
+
     <script>
 
       notification.requestPermission().then((result) => { 
